{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 117,
  "lineage": "c129cfa7-baf7-e81f-aa42-2070345cdef0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581916614888:vpc/vpc-06ff44e2273be4788",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b718d35b4e63e894",
            "default_route_table_id": "rtb-09e318bbe73a82f6f",
            "default_security_group_id": "sg-0787127da1e058bd0",
            "dhcp_options_id": "dopt-0fb013ef412439ad3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ff44e2273be4788",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e318bbe73a82f6f",
            "owner_id": "581916614888",
            "tags": {
              "Name": "Dev-vpc"
            },
            "tags_all": {
              "Name": "Dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.myapp-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-041d265258e800105",
            "arn": "arn:aws:ec2:us-east-1:581916614888:instance/i-0a150b4cdf58f7e4f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a150b4cdf58f7e4f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "appkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0087c16badefa0093",
            "private_dns": "ip-10-0-0-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.174",
            "public_ip": "54.227.101.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e522afde89680e3",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043a3ea7217415f25",
            "tags": {
              "Name": "Dev-server"
            },
            "tags_all": {
              "Name": "Dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042086b6014a35cd6"
            ]
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "module.myapp-server.aws_key_pair.ssh-key",
            "module.myapp-server.aws_security_group.app-sg",
            "module.myapp-server.data.aws_ami.amazon-linux-image",
            "module.myapp-subnet.aws_subnet.app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581916614888:security-group/sg-042086b6014a35cd6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042086b6014a35cd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "41.36.75.57/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Myapp-sg",
            "name_prefix": "",
            "owner_id": "581916614888",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-SG"
            },
            "tags_all": {
              "Name": "Dev-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ff44e2273be4788"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581916614888:internet-gateway/igw-0594332f780ecf111",
            "id": "igw-0594332f780ecf111",
            "owner_id": "581916614888",
            "tags": {
              "Name": "Dev-gateway"
            },
            "tags_all": {
              "Name": "Dev-gateway"
            },
            "vpc_id": "vpc-06ff44e2273be4788"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581916614888:route-table/rtb-016b1d8118c3ac569",
            "id": "rtb-016b1d8118c3ac569",
            "owner_id": "581916614888",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0594332f780ecf111",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ff44e2273be4788"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc",
            "module.myapp-subnet.aws_internet_gateway.app-gateway"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2ff951c6afddc26",
            "route_table_id": "rtb-016b1d8118c3ac569",
            "subnet_id": "subnet-043a3ea7217415f25"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "module.myapp-subnet.aws_internet_gateway.app-gateway",
            "module.myapp-subnet.aws_route_table.app-route-table",
            "module.myapp-subnet.aws_subnet.app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581916614888:subnet/subnet-043a3ea7217415f25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043a3ea7217415f25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581916614888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Subnet"
            },
            "tags_all": {
              "Name": "Dev-Subnet"
            },
            "vpc_id": "vpc-06ff44e2273be4788"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    }
  ]
}